--- a/src/supermarket/barang/FormBuangBarang.form
+++ b/src/supermarket/barang/FormBuangBarang.form
@@ -427,7 +427,7 @@
                                       <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="datetglbuang" min="-2" pref="250" max="-2" attributes="0"/>
                                           <Group type="102" alignment="0" attributes="0">
-                                              <Component id="btntambah" min="-2" pref="115" max="-2" attributes="0"/>
+                                              <Component id="btnDiscard" min="-2" pref="115" max="-2" attributes="0"/>
                                               <EmptySpace type="separate" max="-2" attributes="0"/>
                                               <Component id="btnreset" min="-2" pref="115" max="-2" attributes="0"/>
                                           </Group>
@@ -493,7 +493,7 @@
                       </Group>
                       <EmptySpace pref="11" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="btntambah" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnDiscard" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="btnreset" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="115" max="-2" attributes="0"/>
@@ -538,7 +538,7 @@
                 <Property name="text" type="java.lang.String" value="ID Karyawan"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JToggleButton" name="btntambah">
+            <Component class="javax.swing.JToggleButton" name="btnDiscard">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="18" style="0"/>
@@ -546,7 +546,7 @@
                 <Property name="text" type="java.lang.String" value="Buang"/>
               </Properties>
               <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btntambahMouseClicked"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnDiscardMouseClicked"/>
               </Events>
             </Component>
             <Component class="javax.swing.JToggleButton" name="btnreset">
@@ -670,7 +670,11 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="14" style="0"/>
                 </Property>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtidkaryawanKeyReleased"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="txtnamakaryawan">
               <Properties>
@@ -678,6 +682,9 @@
                   <Font name="Tahoma" size="14" style="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtnamakaryawanKeyReleased"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel13">
               <Properties>
