--- a/src/supermarket/barang/FormPenjualanBarang.form
+++ b/src/supermarket/barang/FormPenjualanBarang.form
@@ -437,8 +437,8 @@
                                           </Group>
                                       </Group>
                                       <Component id="btnreset" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="btnreset2" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="txtTotPrice" alignment="1" max="32767" attributes="0"/>
+                                      <Component id="btnPrint" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="txtTotBill" alignment="1" max="32767" attributes="0"/>
                                   </Group>
                                   <Component id="lblidkaryawan2" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
@@ -475,11 +475,11 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="lblidkaryawan2" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
-                              <Component id="txtTotPrice" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtTotBill" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
                               <Component id="btnreset" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="btnreset2" min="-2" max="-2" attributes="0"/>
+                              <Component id="btnPrint" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jScrollPane1" alignment="0" pref="387" max="32767" attributes="0"/>
                       </Group>
@@ -605,7 +605,7 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JToggleButton" name="btnreset2">
+            <Component class="javax.swing.JToggleButton" name="btnPrint">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="18" style="0"/>
@@ -613,7 +613,7 @@
                 <Property name="text" type="java.lang.String" value="Cetak"/>
               </Properties>
               <Events>
-                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnreset2MouseClicked"/>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnPrintMouseClicked"/>
               </Events>
             </Component>
             <Component class="javax.swing.JToggleButton" name="btnaddSaleGoods">
@@ -726,7 +726,7 @@
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
             </Component>
-            <Component class="javax.swing.JTextField" name="txtTotPrice">
+            <Component class="javax.swing.JTextField" name="txtTotBill">
               <Properties>
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
@@ -736,7 +736,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="18" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Total Harga"/>
+                <Property name="text" type="java.lang.String" value="Total Tagihan"/>
               </Properties>
             </Component>
           </SubComponents>
