--- a/src/supermarket/jamkerja/FormJadwal.form
+++ b/src/supermarket/jamkerja/FormJadwal.form
@@ -318,7 +318,7 @@
                       <Color blue="72" green="97" red="fe" type="rgb"/>
                     </Property>
                     <Property name="horizontalAlignment" type="int" value="0"/>
-                    <Property name="text" type="java.lang.String" value="Jam Kerja"/>
+                    <Property name="text" type="java.lang.String" value="Jadwal"/>
                   </Properties>
                 </Component>
               </SubComponents>
@@ -360,9 +360,9 @@
                           <Component id="jScrollPane1" alignment="1" max="32767" attributes="0"/>
                           <Group type="102" alignment="1" attributes="0">
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                              <Component id="txtbarangbuang2" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="253" max="-2" attributes="0"/>
-                              <Component id="txtbarangbuang3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtPrevWeek" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="157" max="-2" attributes="0"/>
+                              <Component id="txtNextWeek" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -376,8 +376,8 @@
                       <Component id="jToolBar1" min="-2" pref="25" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="txtbarangbuang2" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtbarangbuang3" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtPrevWeek" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="txtNextWeek" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                       <Component id="jScrollPane1" pref="570" max="32767" attributes="0"/>
@@ -527,7 +527,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTable" name="tblShiftWork">
+                <Component class="javax.swing.JTable" name="tblSchedule">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="4" rowCount="4">
@@ -541,21 +541,27 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JLabel" name="txtbarangbuang2">
+            <Component class="javax.swing.JLabel" name="txtPrevWeek">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="12" style="1"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="&lt;-"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="txtPrevWeekMouseClicked"/>
+              </Events>
             </Component>
-            <Component class="javax.swing.JLabel" name="txtbarangbuang3">
+            <Component class="javax.swing.JLabel" name="txtNextWeek">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Tahoma" size="12" style="1"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="-&gt;"/>
               </Properties>
+              <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="txtNextWeekMouseClicked"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
