Fixing Member, form penjualan barang, goods

--- a/src/supermarket/barang/FormPenjualanBarang.form
+++ b/src/supermarket/barang/FormPenjualanBarang.form
@@ -355,7 +355,7 @@
                       <Color blue="9" green="11" red="34" type="rgb"/>
                     </Property>
                     <Property name="horizontalAlignment" type="int" value="0"/>
-                    <Property name="text" type="java.lang.String" value="Jam Kerja"/>
+                    <Property name="text" type="java.lang.String" value="Jadwal"/>
                   </Properties>
                   <Events>
                     <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblJamKerjaMouseClicked"/>
